--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.24.9",
     "@testing-library/react": "^14.0.0",
-    "@types/lru-cache": "^7.10.10",
+   
     "axios": "^1.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
