--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/react-hooks": "^8.0.1",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@types/redux-logger": "^3.0.9",
+    "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
     "jest": "^29.4.3",
+    "redux-mock-store": "^1.5.4",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
