--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react-hooks": "^8.0.1",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/node": "^18.14.0",
     "@types/react": "^18.0.27",
@@ -33,8 +35,12 @@
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^3.1.0",
+    "core-js": "^3.28.0",
     "jest": "^29.4.3",
+    "jest-environment-jsdom": "^29.4.3",
     "redux-mock-store": "^1.5.4",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.1.0"
   }
