--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,6 @@
     },
     "extends": [
       "plugin:react/recommended",
-      "airbnb",
       "plugin:@typescript-eslint/recommended",
       "prettier",
       "prettier/prettier",
@@ -23,38 +22,13 @@
     "rules": {
       "no-use-before-define": "off",
       "@typescript-eslint/no-use-before-define": ["error"],
-      "react/jsx-filename-extension": [
-        "warn",
-        {
-          "extensions": [".tsx"]
-        }
-      ],
-      "import/extensions": [
-        "error",
-        "ignorePackages",
-        {
-          "ts": "never",
-          "tsx": "never"
-        }
-      ],
       "no-shadow": "off",
-      "@typescript-eslint/no-shadow": ["error"],
-      "@typescript-eslint/explicit-function-return-type": [
-        "error",
-        {
-          "allowExpressions": true
-        }
-      ],
-      "max-len": [
-        "warn",
-        {
-          "code": 80
-        }
-      ],
-      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/rules-of-hooks": "warn",
       "react-hooks/exhaustive-deps": "warn",
       "import/prefer-default-export": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react/react-in-jsx-scope": "off",
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", "ts", "tsx"] }],
     },
     "settings": {
       "import/resolver": {
